# vibejam

./: .gitignore  PROGRESS.md  README.md  pyproject.toml  requirements.txt
data/: README.md  toy.txt
docs/: architecture.md  layer3_labs.md
scripts/: compare_arch.py  eval_rewrite.py  make_dummy_drafts_jsonl.py  prepare_data.py  prepare_rewrite_pairs.py  rewrite_demo.py  sample_lm.py  style_engine_demo.py  toy_test.py  train_lm.py  train_rewrite_finetune.py  train_tokenizer_bpe.py
vibejam/: __init__.py  base_lm.py  build.py  build_model.py  config.py  data.py  engine.py  lm_interface.py  model.py  prompts.py  rewrite.py  sample.py  tokenizer_bpe.py  tokenizer_char.py  train.py
vibejam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vibejam/labs/: __init__.py  moe_ffn.py  rwkv_lite.py
